--- a/src/app/partners/partners.component.html
+++ b/src/app/partners/partners.component.html
@@ -32,7 +32,7 @@
                 </div>
               </div>
 
-              <div class="col">
+              <div class="col" [ngClass]="{'custom-loader disabled': loadingRefList}">
                 <h2 class="title-inner">{{ 'invite-friends.total' | translate }}</h2>
 
                 <div class="commission">
@@ -45,7 +45,7 @@
                 <h2 class="title-inner">{{ 'invite-friends.list-of-all' | translate }}</h2>
 
                 <div class="hz-scroll">
-                  <table class="default-table ">
+                  <table class="default-table">
                     <thead>
                     <tr>
                       <th>{{ 'invite-friends.first-name' | translate }}</th>
@@ -56,26 +56,12 @@
                     </thead>
 
                     <tbody>
-                    <tr>
-                      <td>Aneta Stará</td>
-                      <td>14. 07. 2018</td>
-                      <td>Nesměnil</td>
-                      <td>8 USD</td>
-                    </tr>
-
-                    <tr>
-                      <td>Petr Kalivoda</td>
-                      <td>14. 07. 2018</td>
-                      <td>Směnil</td>
-                      <td>8 USD</td>
-                    </tr>
-
-                    <tr>
-                      <td>Karel Nový</td>
-                      <td>14. 07. 2018</td>
-                      <td>Směnil</td>
-                      <td>8 USD</td>
-                    </tr>
+                      <tr *ngFor="let listItem of refArray; let i = index">
+                        <td>{{listItem.name}}</td>
+                        <td>{{listItem.date.date | date: 'dd.MM.yyyy'}}</td>
+                        <td>{{listItem.activation}}</td>
+                        <td>{{listItem.total_exchange || 0}}</td>
+                      </tr>
                     </tbody>
                   </table>
                 </div>
