--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -1251,7 +1251,7 @@ hr
 					border-right: 1px solid #B7BECE
 					cursor: default
 					&:first-child
-						width: 12.4rem
+						width: 22.5rem
 			tbody
 				tr:last-child
 					td
@@ -1286,7 +1286,7 @@ hr
 						justify-content: center
 						align-items: flex-end
 						padding-bottom: 1.5rem
-						height: 12.5rem
+						height: 18.5rem
 						position: relative
 						border-right: 1px solid #3A4D7D
 						&:first-child
@@ -1309,7 +1309,7 @@ hr
 								width: 0
 								height: 0
 								border-style: solid
-								border-width: 12.25rem 0 0 12.25rem
+								border-width: 18.25rem 0 0 22.25rem
 								border-color: transparent transparent transparent $bgAccentSecond
 							&:after
 								content: ''
@@ -1319,7 +1319,7 @@ hr
 								width: 0
 								height: 0
 								border-style: solid
-								border-width: 0 12.25rem 12.25rem 0
+								border-width: 0 15.25rem 12.25rem 0
 								border-color: transparent $bgAccentSecondDark transparent transparent
 							&-send
 								z-index: 2
@@ -1345,11 +1345,12 @@ hr
 	.content__header .sub-title
 		margin-bottom: 7.8rem
 	.main__wrapper .content
-		max-width: 74.4rem
-		margin: 0 auto 15rem
+    max-width: 100%
+    margin: 0 auto 15rem
+    width: auto
+    flex: none
 	.hard-table.hz-scroll table
-		width: 74.4rem
-
+    width: auto
 .quote
 	display: block
 	width: 100%
