--- a/src/app/fees-discount/fees-discount.component.html
+++ b/src/app/fees-discount/fees-discount.component.html
@@ -26,7 +26,7 @@
                     </div>
                   </th>
 
-                  <th *ngFor="let thItem of commissionArray.columns; let i = index">
+                  <th *ngFor="let thItem of commissionArray?.columns; let i = index">
                     <div class="currency">
                       <div class="currency-icons" [style.background-image]="'url(' + thItem.logo +')'"></div>
                       <div class="currency-name">{{thItem.name}}</div>
@@ -35,9 +35,8 @@
                 </tr>
                 </thead>
 
-
                 <tbody>
-                <tr *ngFor="let tdItem of commissionArray.data; let i = index">
+                <tr *ngFor="let tdItem of commissionArray?.data; let i = index">
 
                   <td>
                     <div class="currency">
