--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -45,3 +45,10 @@
 
   100%
     box-shadow: 0 28px 0 #304271
+.exchange .column .subblock-title
+  position: relative
+
+.exchange .column .alert
+  max-width: 100%
+  margin-bottom: 3rem
+  margin-top: 0
